After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741595 - Search provider in 3.15.1 is crashy again
Search provider in 3.15.1 is crashy again
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.15.x
Other Linux
: Normal critical
: ---
Assigned To: Michael Catanzaro
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-12-16 13:42 UTC by Michael Catanzaro
Modified: 2015-02-06 19:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix the search provider (3.50 KB, patch)
2015-02-06 16:38 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2014-12-16 13:42:24 UTC
I just pushed 3.15.1 to Fedora and we're seeing new crashes: https://retrace.fedoraproject.org/faf/problems/544306/

I haven't looked into it yet because Sleep, but it's probably related to https://git.gnome.org/browse/epiphany/commit/?id=ca7f782425c7162258971ca7e3e2532c3da3d5fc
Comment 1 Michael Catanzaro 2015-02-06 16:38:11 UTC
Created attachment 296297 [details] [review]
Fix the search provider

The search provider is crashing on start since
3806c195d631cc55f2cef64c4be6bc733745e730. EphyEmbedShell needs to create
a WebKitWebContext.

We could also try to inherit EphySearchProvider from EphyShell and then
run EphyEmbedShell as a GApplication, but that is really horrible
madness.
Comment 2 Carlos Garcia Campos 2015-02-06 16:56:32 UTC
Review of attachment 296297 [details] [review]:

Ok.
Comment 3 Michael Catanzaro 2015-02-06 19:09:16 UTC
Attachment 296297 [details] pushed as dd275eb - Fix the search provider