Fix the search provider

The search provider is crashing on start since
3806c195d631cc55f2cef64c4be6bc733745e730. EphyEmbedShell needs to create
a WebKitWebContext.

We could also try to inherit EphySearchProvider from EphyShell and then
run EphyEmbedShell as a GApplication, but that is really horrible
madness.

https://bugzilla.gnome.org/show_bug.cgi?id=741595